Added logo into main cart
Added the Logo to play at start of game.

Updated the instructions to play.

--- a/Web Version/instructions.html
+++ b/Web Version/instructions.html
@@ -2,12 +2,9 @@
 <html>
     <body>
     <h3>Armored War Assault II Lite Instructions: </h3>
-    <p> Player 1 (orange) use Left or Right Arrow Keys to move in the left or right direction.</p> 
-    <p> Use Up or Down Arrow Keys to increase or decrease the angle of the tank cannon relative to the ground.</p> 
-    <p> Press X to end your turn.</p> 
-    <p> Player 2 (white) use A or D Keys to move in the left or right direction.</p> 
-    <p> Use W or S Keys to increase or decrease the angle of the tank cannon relative to the ground.</p> 
-    <p> Press M to end your turn.</p> 
-    <h4> Player 1 cannot move while Player 2 is moving and vice versa.</h4>
+    <p>Players use Left Arrow and Right Arrow to move horizontally.</p>
+    <p>Use Up Arrow and Down Arrow to set angle of main gun.</p>
+    <p>Z to Switch the currently active player / end turn.</p>
+    <p>X to Fire.</p>
     </body>
 </html>
